--- a/style/styles.css
+++ b/style/styles.css
@@ -4,6 +4,8 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  background-color: aquamarine;
+  color: blueviolet;
 }
 
 h1 {
