update: Create Read UI update + fixed API#4 with 'for'

--- a/style/styles.css
+++ b/style/styles.css
@@ -1,16 +1,15 @@
-/* styles.css 파일 */
+/* 상품목록 */
 
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: aquamarine;
-  color: blueviolet;
 }
 
 h1 {
   text-align: center;
   margin-top: 20px;
+  color: red;
 }
 
 .product-grid {
@@ -42,4 +41,89 @@ h1 {
 .product p {
   font-size: 14px;
   margin: 0;
+}
+
+/* 상품등록 모달창 */
+#createProductBtn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: red;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#createProductForm {
+  display: grid;
+  gap: 10px;
+}
+
+#saveChangesBtn {
+  background-color: red;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* 모달창 상세조회 */
+#productDetailModal {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 600px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+#productDetailModal .modal-content {
+  position: relative;
+}
+
+#productDetailModal .close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
 }
